<resources>
    <string name="app_name">Speech Control</string>
    <string name="name_screen">Smart Voice</string>
    <string name="btn_start">START</string>
    <string name="slogan">Giving you a new experience</string>
    <string name="welcome">Hi there !</string>
    <string name="setting">Setting</string>
    <string name="camera">Camera</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>
    <string name="mess">Messenger</string>
    <string name="fb">Facebook</string>
    <string name="yt">Youtube</string>
    <string name="mail">Mail</string>
    <string name="tap">Tap to Speech</string>
    <string name="ig">Instagram</string>
</resources>