<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="#FFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">
    <LinearLayout
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title1"
            android:paddingLeft="23dp"
            android:layout_marginTop="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/hiThere"
            android:fontFamily="@font/blod"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/title2"
            android:layout_marginTop="14dp"
            android:paddingLeft="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_screen"
            android:textColor="#EB5F34"
            android:fontFamily="@font/blod"
            android:textSize="35sp"/>
        <TextView
            android:id="@+id/title3"
            android:layout_marginTop="8dp"
            android:paddingLeft="23dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textColor="#EB5F34"
            android:fontFamily="@font/blod"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/imagevi"
            android:paddingTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bac"
            android:scaleType="centerCrop"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button_start"
                style="?android:attr/borderlessButtonStyle"
                android:layout_marginRight="14dp"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginVertical="@android:dimen/app_icon_size"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_bg"
                android:fontFamily="@font/blod"
                android:text="@string/btn_start"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>