<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_screen"
                android:textColor="#EB5F34"
                android:fontFamily="@font/blod"
                android:textSize="32sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slogan"
                android:textColor="#B3000000"
                android:fontFamily="@font/blod"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Your Control"
                android:textColor="#B3000000"
                android:fontFamily="@font/blod"
                android:textSize="25sp"/>
        </LinearLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="14dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/vn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/vietnam"/>
            <ImageButton
                android:id="@+id/en"
                android:layout_marginLeft="23dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/en"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="6.3"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <HorizontalScrollView
            android:id="@+id/scr1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="40dp"
                android:paddingBottom="40dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:onClick="onClick"
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="50dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginBottom="50dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/setting" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/blod"
                            android:textSize="24sp"
                            android:text="@string/setting"
                            android:textColor="#EB5F34" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:onClick="onClick"
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="50dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginBottom="50dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/camera" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/blod"
                            android:textSize="24sp"
                            android:text="@string/camera"
                            android:textColor="#EB5F34" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:onClick="onClick"
                    android:id="@+id/call"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="50dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginBottom="50dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/phone" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/blod"
                            android:textSize="24sp"
                            android:text="@string/call"
                            android:textColor="#EB5F34" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:onClick="onClick"
                    android:id="@+id/sms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="50dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginBottom="50dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/mess" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/blod"
                            android:textSize="24sp"
                            android:text="@string/sms"
                            android:textColor="#EB5F34" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:onClick="onClick"
                    android:id="@+id/mess"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="50dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginBottom="50dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/messfb" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/blod"
                            android:textSize="24sp"
                            android:text="@string/mess"
                            android:textColor="#EB5F34" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:onClick="onClick"
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="50dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginBottom="50dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/face" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/blod"
                            android:textSize="24sp"
                            android:text="@string/fb"
                            android:textColor="#EB5F34" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:onClick="onClick"
                    android:id="@+id/youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="50dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginBottom="50dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/youtube" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/blod"
                            android:textSize="24sp"
                            android:text="@string/yt"
                            android:textColor="#EB5F34" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                android:onClick="onClick"
                android:id="@+id/mail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_row="2"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:paddingTop="50dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_marginBottom="50dp"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/mail" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/blod"
                        android:textSize="24sp"
                        android:text="@string/mail"
                        android:textColor="#EB5F34" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:onClick="onClick"
                    android:id="@+id/ig"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_row="2"
                    android:layout_gravity="fill"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:paddingTop="50dp"
                        android:gravity="center"
                        android:orientation="vertical">
                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_marginBottom="50dp"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/ig" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/blod"
                            android:textSize="24sp"
                            android:text="@string/ig"
                            android:textColor="#EB5F34" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>
    <LinearLayout
        android:layout_weight="1.7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/logo_voice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/spe"
            tools:ignore="MissingConstraints" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/blod"
            android:textColor="#EB5F34"
            android:text="@string/tap"/>
    </LinearLayout>



</LinearLayout>